--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mantine/hooks": "^7.10.0",
     "@mantine/modals": "^7.10.0",
     "@mantine/notifications": "^7.10.0",
+    "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "lucide": "^0.379.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
